# rubot

./: .travis.yml  ALPHA_BETA.md  CHANGELOG.md  Cargo.toml  README.md  b.sh  baseline
benches/: chess.rs  steps_complete.cmp  steps_complete.rs  steps_partial.cmp  steps_partial.rs  steps_to_completion.rs  time_complete.rs  time_partial.rs  time_to_completion.rs  to_completion.rs
examples/: chess.rs  oko.rs  tic-tac-toe.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: complete.rs  partial.rs  to_completion.rs
src/: alpha_beta.rs  brute.rs  fitness.rs  lib.rs  prelude.rs  tests.rs  tree.rs
src/alpha_beta/: debug.rs  mod.rs
src/tests/: brute.rs  completed.rs  mod.rs  partial.rs
